Project

General

Profile

Actions

Bug #8783

closed

ruby 1.9/2.0 crash on exit on FreeBSD/powerpc64

Bug #8783: ruby 1.9/2.0 crash on exit on FreeBSD/powerpc64

Added by chmeee (Justin Hibbits) about 13 years ago. Updated over 12 years ago.

Status:
Closed
Assignee:
Target version:
-
ruby -v:
ruby 2.0.0p195 (2013-05-14 revision 40734) [powerpc64-freebsd10.0]
[ruby-core:56590]

Description

On FreeBSD/powerpc64, ruby 1.9 and 2.0 segfault. I traced this to the default stack being too small (12K). A larger stack is required, 4 pages is sufficient.


Files

patch-ppc64-fix-thread_pthread.c (746 Bytes) patch-ppc64-fix-thread_pthread.c swills (Steve Wills), 01/21/2014 05:42 AM

Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #9436: r44670以降Solaris10でthread_pthread.cがコンパイルエラーClosedActions
Actions

Also available in: PDF Atom